Fixed alignment issue and added colouring on back to classroom link

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -439,7 +439,12 @@ button {
   .returnLink p {
     font-size: 1.8rem;
     float: left;
-    color: #231f1f; }
+    color: #231f1f;
+    transition: color 0.1s; }
+    .returnLink p:hover {
+      color: #e40015; }
+  .returnLink img svg path {
+    fill: green; }
 
 @media (max-width: 500px) {
   .halpq__filter {
@@ -717,7 +722,11 @@ span.highlighted {
     display: block;
     width: 100%;
     border: 0;
-    background: #e44e48; }
+    background: #e40015;
+    color: #ffffff;
+    transition: background 0.1s; }
+    .questionForm__submit:hover {
+      background: #e44e48; }
   .questionForm__label {
     display: none;
     font-weight: bold;
@@ -740,6 +749,13 @@ span.highlighted {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+@supports (-moz-appearance: none) {
+  .questionForm__addbutton {
+    padding: 19px;
+    line-height: 38px;
+    height: 70px;
+    width: 70px; } }
 
 @media (max-width: 750px) {
   .questionForm__addbutton {
